--- a/拖拽/dome.html
+++ b/拖拽/dome.html
@@ -1,173 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <script src="js/jquery-2.2.3.min.js"></script>
-</head>
-<script>
-    $(function(){
-        var droppable = {
-            init : function(callback){
-                this.drag();
-                this.callback = callback;
-            },
-            drag : function(){
-                var That = this;
-                this.disX = 0;
-                this.disY = 0;
-                this.$dragObj = null;   /* 创建拖拽对象 */
-                this.fnDown();
-
-            },
-            fnDown : function(){
-                var This = this;
-                /* 鼠标按下 */
-                $(document).on('mousedown','li',function(ev){
-                    This.$dragObj = $(this); /* 拖拽对象赋值 */
-                        /* 标记当前拖拽的元素 */
-                    This.pos = {
-                        left :　$(this).offset().left,
-                        top : $(this).offset().top
-                    }
-                    $(this).addClass('on');
-                    /* 创建空白元素站位 */
-                    var That = $(this);
-                    This.disX = ev.pageX - $(this).offset().left;
-                    This.disY = ev.pageY - $(this).offset().top;
-                    $(this).css({margin:0,zIndex:9999,position:'absolute','left':(ev.pageX - This.disX),'top':(ev.pageY - This.disY) + $(document).scrollTop()}); /* 移动 */
-                    This.createElem($(this));
-                    This.fnMove(That);
-                    This.fnUp(That);
-                    return false;
-                })
-            },
-            fnMove : function(obj){
-                var This = this;
-                $(document).on('mousemove.drag',function(ev){
-                    obj.css({margin:0,zIndex:9999,position:'absolute','left':(ev.pageX - This.disX),'top':(ev.pageY - This.disY)}); /* 移动 */
-                    $('li').each(function(i,elem){
-                        if(!$(elem).hasClass('on')){
-                            if(!This.boom(obj,$(elem))){
-                                This.$pzElem = $(elem);
-                                This.createElem();
-                                /* 存储碰撞元素 */
-                            };
-                        }
-                    })
-
-                });
-            },
-            fnUp : function(obj){
-                var This = this;
-                $(document).on('mouseup.drag',function(){
-                    /* 移除 站位元素 */
-                    This.upInsert();
-                    This.$nullElem.remove();
-                    obj.removeClass('on').removeAttr('style');
-                    This.callback && This.callback();
-                    $(this).off('.drag');
-                });
-            },
-            createElem : function(obj){
-                if(this.$nullElem){
-                    this.$nullElem.remove();
-                }
-                this.$nullElem = $('<li class="on null"></li>');
-                this.$nullElem.css(this.getSize(this.$dragObj));
-                if(obj){
-                    obj.after(this.$nullElem); /* 正常创建  */
-                }else{
-                    this.pzInsert(); /* 发生碰撞的时候创建 */
-                }
-            },
-            pzInsert : function(){
-                var This = this;
-                if(getDir()){
-                    this.$pzElem.after(this.$nullElem);
-                } else {
-                    this.$pzElem.before(this.$nullElem);
-                }
-                function getDir(){
-                    var result = This.$pzElem.offset().top - This.$dragObj.offset().top;
-                    if(result < 0){  /* 表示碰撞了 向下插入*/
-                        return true;
-                    }else{
-                        return false;  /* 向上插入 */
-                    }
-                }
-            },
-            getSize : function(obj){
-                var size = {}
-                size.width = obj.width();
-                size.height = obj.height();
-                return size;
-            },
-            upInsert : function(){ /* 插入元素 */
-                this.$nullElem.css('margin','20px 0')
-                this.$nullElem.after(this.$dragObj);
-            },
-            boom : function(obj1,obj2){
-                var T1 = obj1.offset().top;
-                var R1 = obj1.offset().left + obj1.innerWidth();
-                var B1 = obj1.offset().top + obj1.innerHeight();
-                var L1 = obj1.offset().left;
-                var T2 = obj2.offset().top;
-                var R2 = obj2.offset().left + obj2.innerWidth();
-                var B2 = obj2.offset().top + obj2.innerHeight();
-                var L2 = obj2.offset().left;
-                if( B1 < T2 || R2 < L1 || B2 < T1 || L2 > R1){
-                    return true;
-                }else{
-                    return false;
-                }
-            }
-        };
-        droppable.init(function(){
-            console.log('拖拽成功');
-        });
-    });
-
-
-</script>
-<style>
-    body { margin:0; }
-    ul { width:200px; margin:20px; padding:0; float:left; border:solid 1px #ccc; }
-    li { list-style: none; width:200px; height:100px; margin:20px 0;font-size:30px; color:#fff; text-align:center; line-height:100px; }
-    ul:nth-last-of-type(1) li { background:red; }
-    ul:nth-last-of-type(2) li { background:green; }
-    ul:nth-last-of-type(3) li { background:pink; }
-    ul .null { background:#ccc !important; }
-    .on { z-index:999; }
-</style>
-<body>
-    <ul>
-        <li class="active">1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-    </ul>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-    </ul>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-    </ul>
-
-</body>
-</html>
+  window.updataApps = function(res){
+    var i = '';
+    $.each(res,function(index, el) {
+      if(el.packageName == appInfo._packageName_){
+         i = index;
+         return;
+      }
+    }); 
+    if(res[i].status == 201 ){
+      downloadAPI.launchApp("pkgName") 
+    }else{
+      android.downloadApp('{"downloadUrl":"http://sj.img4399.com/game_list/9/com.m4399.youpai/m4399.youpai.v88842.apk","packageName":"com.m4399.youpai","appName":"4399游拍(游戏视频)","iconPath":"http://f1.img4399.com/sj~49689_logo_56454943c2446.jpg","fileMD5":"c9c6301314afc8220945b851aea4139a"}')  /*下载*/
+      /*downloadAPI.downloadApp('{"downloadUrl":'+ appInfo._downloadUrl_+':'+ appInfo._packageName_+',"appName":'+ appInfo._appName_+',"iconPath":'+ appInfo._iconPath_+',"fileMD5":'+ appInfo._fileMD5_+'}')*/  /*下载*/ 
+    }
+  };
