--- a/wjdc/answer.html
+++ b/wjdc/answer.html
@@ -32,96 +32,115 @@
 </section>
 <section class="m_content" id="j-content">
     <div class="m_subject">
-        <dl data-id="1" data-type="2">
-            <dt>
-                1、以下哪个选项是漫画/动画片的入口？ <br>
-                （多选）
-            </dt>
-            <dd>
-                <i><b></b></i>a、广场-娱乐频道
-            </dd>
-            <dd>
-                <i><b></b></i>b、广场-活动
-            </dd>
-            <dd>
-                <i><b></b></i>c、我-我的任务
-            </dd>
-            <dd>
-                <i><b></b></i>d、首页-资讯
-            </dd>
-        </dl>
-        <dl class="fill" data-id="2" data-type="3">
-            <dt>
-                2、新增的漫画和动画片，是否有你感兴趣的内容呢？如果有请举例说明，喜欢哪些？如果没有请告知原因， 我们会补充更多内容~
-            </dt>
-            <div>
-                <textarea name="" id="" cols="30" rows="10" class="j-inp">快快说出你想法吧~</textarea>
-                <span>(300字以内)</span>
+        <div class="window">
+            <div class="wrap" id="j-wrap">
+                <dl data-id="1" data-type="2">
+                    <dt>
+                        1、以下哪个选项是漫画/动画片的入口？ <br>
+                        （多选）
+                    </dt>
+                    <dd>
+                        <i><b></b></i>a、广场-娱乐频道
+                    </dd>
+                    <dd>
+                        <i><b></b></i>b、广场-活动
+                    </dd>
+                    <dd>
+                        <i><b></b></i>c、我-我的任务
+                    </dd>
+                    <dd>
+                        <i><b></b></i>d、首页-资讯
+                    </dd>
+                </dl>
+                <dl class="fill" data-id="2" data-type="3">
+                    <dt>
+                        2、新增的漫画和动画片，是否有你感兴趣的内容呢？如果有请举例说明，喜欢哪些？如果没有请告知原因， 我们会补充更多内容~
+                    </dt>
+                    <dd>
+                        <textarea name="" id="" cols="30" rows="10" class="j-inp">快快说出你想法吧~</textarea>
+                        <span>(300字以内)</span>
+                    </dd>
+                </dl>
+                <dl data-id="3" data-type="2">
+                    <dt>【1】你最希望在游戏盒上动漫频道看到更多的哪一分类动画片呢？
+                    </dt>
+                    <dd><i><b></b></i>热血战斗</dd>
+                    <dd><i><b></b></i>校园生活</dd>
+                    <dd><i><b></b></i>搞笑逗比</dd>
+                    <dd><i><b></b></i>科幻机战</dd>
+                    <dd><i><b></b></i>体育竞技</dd>
+                    <dd><i><b></b></i>侦探推理</dd>
+                    <dd><i><b></b></i>魔幻玄奇</dd>
+                    <dd><i><b></b></i>益智幼教</dd>
+                    <dd><i><b></b></i>动画电影</dd>
+                    <dd class="other">其他分类:<input class="j-inp" type="text"></dd>
+                </dl>
+                <dl data-id="4" data-type="2">
+                    <dt>【2】你最希望在游戏盒上漫画频道看到更多的哪一分类漫画呢？</dt>
+                    <dd><i><b></b></i> 热血战斗</dd>
+                    <dd><i><b></b></i>青春恋爱</dd>
+                    <dd><i><b></b></i>四格漫画</dd>
+                    <dd><i><b></b></i>校园生活</dd>
+                    <dd><i><b></b></i>搞笑逗比</dd>
+                    <dd><i><b></b></i>耽美百合</dd>
+                    <dd><i><b></b></i>体育竞技</dd>
+                    <dd><i><b></b></i>侦探推理</dd>
+                    <dd><i><b></b></i>魔幻玄奇</dd>
+                    <dd><i><b></b></i>历史人文</dd>
+                    <dd class="other">其他分类:<input class="j-inp" type="text"></dd>
+                </dl>
+                <dl data-id="5" data-type="2">
+                    <dt>【3】以下哪一部是你最喜欢的动画片？</dt>
+                    <dd><i><b></b></i>猪猪侠</dd>
+                    <dd><i><b></b></i>赛尔号</dd>
+                    <dd><i><b></b></i>秦时明月</dd>
+                    <dd><i><b></b></i>百变马丁</dd>
+                    <dd><i><b></b></i>十万个冷笑话</dd>
+                    <dd><i><b></b></i>小马宝莉</dd>
+                    <dd><i><b></b></i>憨豆先生</dd>
+                    <dd><i><b></b></i>偶像活动</dd>
+                    <dd><i><b></b></i>火影忍者</dd>
+                    <dd><i><b></b></i>神奇宝贝</dd>
+                    <dd class="other">以上没有我喜欢的，我最喜欢的动画片是： <input class="j-inp" type="text"></dd>
+                </dl>
+                <dl data-id="6" data-type="2">
+                    <dt>【4】以下哪一部是你最喜欢的漫画？</dt>
+                    <dd><i><b></b></i> 妞妞淘</dd>
+                    <dd><i><b></b></i>基因猎人</dd>
+                    <dd><i><b></b></i>梦幻西游</dd>
+                    <dd><i><b></b></i>堀与宫村</dd>
+                    <dd><i><b></b></i>铂金终局</dd>
+                    <dd><i><b></b></i>只有我不在的街道</dd>
+                    <dd><i><b></b></i>罪恶王冠</dd>
+                    <dd><i><b></b></i>魔法少女小圆</dd>
+                    <dd><i><b></b></i>钢铁侠</dd>
+                    <dd><i><b></b></i>变形金刚</dd>
+                    <dd class="other">以上没有我喜欢的，我最喜欢的漫画是：<input class="j-inp" type="text"></dd>
+                </dl>
+                <dl data-id="6" data-type="2">
+                    <dt>【4】以下哪一部是你最喜欢的漫画？</dt>
+                    <dd><i><b></b></i> 妞妞淘</dd>
+                    <dd><i><b></b></i>基因猎人</dd>
+                    <dd><i><b></b></i>梦幻西游</dd>
+                    <dd><i><b></b></i>堀与宫村</dd>
+                    <dd><i><b></b></i>铂金终局</dd>
+                    <dd><i><b></b></i>只有我不在的街道</dd>
+                    <dd><i><b></b></i>罪恶王冠</dd>
+                    <dd><i><b></b></i>魔法少女小圆</dd>
+                    <dd><i><b></b></i>钢铁侠</dd>
+                    <dd><i><b></b></i>变形金刚</dd>
+                    <dd class="other">以上没有我喜欢的，我最喜欢的漫画是：<input class="j-inp" type="text"></dd>
+                </dl>
             </div>
-        </dl>
-
-        <p> <span>投票</span>（多选，最多可选3项）</p>
-        <dl data-id="3" data-type="2">
-            <dt>【1】你最希望在游戏盒上动漫频道看到更多的哪一分类动画片呢？</dt>
-            <dd><i><b></b></i>热血战斗</dd>
-            <dd><i><b></b></i>校园生活</dd>
-            <dd><i><b></b></i>搞笑逗比</dd>
-            <dd><i><b></b></i>科幻机战</dd>
-            <dd><i><b></b></i>体育竞技</dd>
-            <dd><i><b></b></i>侦探推理</dd>
-            <dd><i><b></b></i>魔幻玄奇</dd>
-            <dd><i><b></b></i>益智幼教</dd>
-            <dd><i><b></b></i>动画电影</dd>
-            <dd class="other">其他分类:<input class="j-inp" type="text"></dd>
-        </dl>
-        <dl data-id="4" data-type="2">
-            <dt>【2】你最希望在游戏盒上漫画频道看到更多的哪一分类漫画呢？</dt>
-            <dd><i><b></b></i> 热血战斗</dd>
-            <dd><i><b></b></i>青春恋爱</dd>
-            <dd><i><b></b></i>四格漫画</dd>
-            <dd><i><b></b></i>校园生活</dd>
-            <dd><i><b></b></i>搞笑逗比</dd>
-            <dd><i><b></b></i>耽美百合</dd>
-            <dd><i><b></b></i>体育竞技</dd>
-            <dd><i><b></b></i>侦探推理</dd>
-            <dd><i><b></b></i>魔幻玄奇</dd>
-            <dd><i><b></b></i>历史人文</dd>
-            <dd class="other">其他分类:<input class="j-inp" type="text"></dd>
-        </dl>
-        <dl data-id="5" data-type="2">
-            <dt>【3】以下哪一部是你最喜欢的动画片？</dt>
-            <dd><i><b></b></i>猪猪侠</dd>
-            <dd><i><b></b></i>赛尔号</dd>
-            <dd><i><b></b></i>秦时明月</dd>
-            <dd><i><b></b></i>百变马丁</dd>
-            <dd><i><b></b></i>十万个冷笑话</dd>
-            <dd><i><b></b></i>小马宝莉</dd>
-            <dd><i><b></b></i>憨豆先生</dd>
-            <dd><i><b></b></i>偶像活动</dd>
-            <dd><i><b></b></i>火影忍者</dd>
-            <dd><i><b></b></i>神奇宝贝</dd>
-            <dd class="other">以上没有我喜欢的，我最喜欢的动画片是： <input class="j-inp" type="text"></dd>
-        </dl>
-        <dl data-id="6" data-type="2">
-            <dt>【4】以下哪一部是你最喜欢的漫画？</dt>
-            <dd><i><b></b></i> 妞妞淘</dd>
-            <dd><i><b></b></i>基因猎人</dd>
-            <dd><i><b></b></i>梦幻西游</dd>
-            <dd><i><b></b></i>堀与宫村</dd>
-            <dd><i><b></b></i>铂金终局</dd>
-            <dd><i><b></b></i>只有我不在的街道</dd>
-            <dd><i><b></b></i>罪恶王冠</dd>
-            <dd><i><b></b></i>魔法少女小圆</dd>
-            <dd><i><b></b></i>钢铁侠</dd>
-            <dd><i><b></b></i>变形金刚</dd>
-            <dd class="other">以上没有我喜欢的，我最喜欢的漫画是：<input class="j-inp" type="text"></dd>
-        </dl>
+        </div>
     </div>
-    <div class="m_submit j-submit">
-        <a></a>
+    <div class="m_submit">
+        <a href="javascript:;" class="next j-next"></a>
+        <!--<a class="submit  j-submit"></a>-->
     </div>
 </section>
 <footer>
+    <h4>玩手机游戏还上4399</h4>
     <p>
         本活动最终解释权归4399所有 <br>
         ©2004-2016四三九九网络股份有限公司
@@ -142,6 +161,8 @@
 </html>
 <script src="http://srs.sowdf.com/js/zepto.min.js"></script>
 <script>
+
+
     var answer = {
         init : function(){ /* 初始化 */
             this.result = {
@@ -246,7 +267,7 @@
         submit : function(){ /* 提交数据结果 */
             var This = this;
 
-            this.$submit.on('click',function(){
+            $(document).on('click','.j-submit',function(){
                 var length = 0;
 
                 for(var json in This.result){/* 获取JSON长度 */
@@ -260,7 +281,7 @@
                 }else{
                     This.popSuccess();
                 }
-
+                console.log(JSON.stringify(This.result));
             });
         },
         showTips : function(text){ /* 普通提示 */
@@ -303,7 +324,65 @@
             this.$textArea.focus(function(){$(this).val('')}).blur(function(){
                 ($(this).val() === '')? $(this).val('快快说出你想法吧~') : null;                 /* 设置未输入的值 */
             });
+        },
+        getResult : function(){
+            return this.result;
         }
     }
     answer.init();
+    var subject = {
+        init : function(){
+            this.elem();
+            this.layout();
+            this.next();
+        },
+        elem : function(){
+            this.$wrap = $('#j-wrap');
+            this.$dl = this.$wrap.find('dl');
+
+        },
+        layout : function(){
+            this.xh = 1; /* 序号默认是1 */
+            this.$w  = this.getSize(this.$dl).w;
+            this.$dlLength = this.$dl.length;
+            var allW = this.$w * this.$dlLength ;
+            this.h = this.$dl.eq(this.xh).height();
+
+            this.$wrap.css({'width':allW,'height':this.h});
+        },
+        setSize : function(){
+
+        },
+        getSize : function(obj){
+            return {w:obj.width(),h:obj.height()};
+        },
+        next : function(){
+            var $next = $('.j-next');
+            var This = this;
+            var lateX = 0;
+            $next.on('click',function(){
+                var result = answer.getResult();
+                if(JSON.stringify(result) == '{}'||!result[This.xh].isAnswer){   /* 只要获取的答案为空 或者answer为Fasle就下一题答题 */
+                    alert('请答题！');
+                    return;
+                }
+                if(This.xh==This.$dlLength - 1){ /* 前一题的时候变成提交按钮 如果在这里就变成j-submit的话会触发这个代理 不信请自测 */
+                    $(this).attr('class','submit j-next');
+                }
+
+                if(This.xh==This.$dlLength){
+                    $(this).attr('class','submit j-submit');
+                    return;
+                }
+
+                This.xh++;
+                This.h = This.$dl.eq(This.xh - 1).height();
+
+                lateX -= This.$w;
+                This.$wrap.css({'transform':'translateX('+lateX+'px)','height':This.h});
+            });
+        }
+
+    }
+    subject.init();
 </script>
