--- a/wjdc/index.html
+++ b/wjdc/index.html
@@ -17,7 +17,6 @@
     <meta name="x5-fullscreen" content="true">
     <meta name="x5-page-mode" content="app">
     <script>
-        alert(1);
         ! function(a) {
             function b() {
                 a.rem = f.getBoundingClientRect().width / 16, f.style.fontSize = a.rem + "px";
@@ -46,17 +45,17 @@
         <p>欢迎你，昵称6个字符...</p>
     </section>
    <section class="m_content">
+       <section class="m_rule">
+            <div>
+                <i>活动奖励：</i>
+                <span>按要求每天完成全部答题、将抽出50名优质回答者，每人送出<em>50盒币!</em> </span>
+            </div>
+       </section>
        <section class="m_1">
            <a class="j-skip">进入答题</a>
        </section>
        <section class="m_2">
-       </section>
-       <section class="m_3">
-       </section>
-       <section class="m_4">
            <a class="j-into">点击进入答题</a>
-       </section>
-       <section class="m_5">
            <ul>
                <li>
                    <i>
@@ -79,7 +78,13 @@
            </ul>
        </section>
    </section>
+    <section class="m_comment">
+        <h4>热门评论</h4>
+        <div class="plug">
+        </div>
+    </section>
     <footer>
+        <h4>玩手机游戏还上4399</h4>
         <p>
             本活动最终解释权归4399所有 <br>
             ©2004-2016四三九九网络股份有限公司
